--- a/backend.service
+++ b/backend.service
@@ -1,6 +1,6 @@
 [Service]
 User=expense
-Environment=DB_HOST="<MYSQL-SERVER-IPADDRESS>"
+Environment=DB_HOST="172.31.42.166"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
