--- a/expense.conf
+++ b/expense.conf
@@ -1,6 +1,6 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://172.31.43.164:8080/; }
+location /api/ { proxy_pass http://backend-dev.rdevopsb72.store:8080/; }
 
 location /health {
   stub_status on;
