--- a/backend.service
+++ b/backend.service
@@ -1,6 +1,9 @@
+[Unit]
+Description = Backend Service
+
 [Service]
 User=expense
-Environment=DB_HOST="mysql.rdevops72.store"
+Environment=DB_HOST="172.31.40.169"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
